tests/rosetta/out/Dart/averages-simple-moving-average.error
run error: exit status 254
../../tests/rosetta/out/Dart/averages-simple-moving-average.dart:75:6: Error: 'main' is already declared in this scope.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/averages-simple-moving-average.dart:62:6: Context: Previous declaration of 'main'.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/averages-simple-moving-average.dart:5:46: Error: The argument type 'num' can't be assigned to the parameter type 'int?'.
    if (s.toString().substring(i, (i as num) + 1) == ch) {
                                             ^
../../tests/rosetta/out/Dart/averages-simple-moving-average.dart:8:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/averages-simple-moving-average.dart:14:46: Error: The argument type 'double' can't be assigned to the parameter type 'String'.
  var y = double.parse(int.parse(((x * 1000) + 0.5))) / 1000;
                                             ^
../../tests/rosetta/out/Dart/averages-simple-moving-average.dart:14:28: Error: The argument type 'int' can't be assigned to the parameter type 'String'.
  var y = double.parse(int.parse(((x * 1000) + 0.5))) / 1000;
                           ^
../../tests/rosetta/out/Dart/averages-simple-moving-average.dart:23:50: Error: The argument type 'num' can't be assigned to the parameter type 'int?'.
      s = s.toString().substring(0, (dot as num) + 4);
                                                 ^
../../tests/rosetta/out/Dart/averages-simple-moving-average.dart:48:24: Error: A value of type 'double' can't be assigned to a variable of type 'int'.
    sum = (sum as num) + xs[i];
                       ^
../../tests/rosetta/out/Dart/averages-simple-moving-average.dart:50:42: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
      sum = (sum as num) - xs[(i as num) - period];
                                         ^
../../tests/rosetta/out/Dart/averages-simple-moving-average.dart:50:26: Error: A value of type 'double' can't be assigned to a variable of type 'int'.
      sum = (sum as num) - xs[(i as num) - period];
                         ^
../../tests/rosetta/out/Dart/averages-simple-moving-average.dart:56:60: Error: The argument type 'num' can't be assigned to the parameter type 'String'.
    res = List.from(res)..add((sum as num) / (double.parse(denom)));
                                                           ^
../../tests/rosetta/out/Dart/averages-simple-moving-average.dart:57:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/averages-simple-moving-average.dart:64:24: Error: The argument type 'List<int>' can't be assigned to the parameter type 'List<double>'.
 - 'List' is from 'dart:core'.
  var sma3 = smaSeries(xs, 3);
                       ^
../../tests/rosetta/out/Dart/averages-simple-moving-average.dart:65:24: Error: The argument type 'List<int>' can't be assigned to the parameter type 'List<double>'.
 - 'List' is from 'dart:core'.
  var sma5 = smaSeries(xs, 5);
                       ^
../../tests/rosetta/out/Dart/averages-simple-moving-average.dart:69:27: Error: The argument type 'int' can't be assigned to the parameter type 'double'.
    var line = pad(fmt3(xs[i]), 5) + '  ' + pad(fmt3(sma3[i]), 5) + '  ' + pad(fmt3(sma5[i]), 5);
                          ^
../../tests/rosetta/out/Dart/averages-simple-moving-average.dart:71:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/averages-simple-moving-average.dart:76:3: Error: Can't use 'main' because it is declared more than once.
  main();
  ^
../../tests/rosetta/out/Dart/averages-simple-moving-average.dart:100:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/averages-simple-moving-average.dart:129:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/averages-simple-moving-average.dart:134:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/averages-simple-moving-average.dart:138:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
